--- a/xss/production/test/3js_class_test_2.html
+++ b/xss/production/test/3js_class_test_2.html
@@ -72,7 +72,7 @@ segments,top_radius,bottom_radius,height,topoffset,bottomoffset);
 	var ev_parent = this;
 	my_cylinder.events.addListener("mousein", function()
 	{    
-		my_cylinder.materials[ 0 ].color.setHex(Fuchsia);
+		my_cylinder.materials[ 0 ].color.setHex(LightGreen);
 	}
 	);
 	var ev_parent = this;
@@ -98,7 +98,7 @@ create_my_cylinder(
 200,100,100,500
 );
 ;
-cylinder_1.hex_set(Blue);
+cylinder_1.hex_set(Red);
 cylinder_1.position.x = x;
 cylinder_1.position.y = y;
 set_rotation_x(cylinder_1.rotation, 10);
