--- a/xss/production/test/3js-ui.html
+++ b/xss/production/test/3js-ui.html
@@ -30,6 +30,8 @@ var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var app_width = 600;
+var app_height = 600;
 var application = {};
 application.events = new ms.event.EventHolder();
 		var streamer = new ms.streamer.Streamer();
@@ -63,7 +65,7 @@ application.events = new ms.event.EventHolder();
     // --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
-renderer.setSize( 600,600 );
+renderer.setSize( app_width, app_height );
 function render() {
 var now   = new Date().getTime();
 if (g_elapsed < 0)
@@ -103,8 +105,9 @@ color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material6);
 var plane_material = new THREE.MeshBasicMaterial({
-color:14737632
+color:Grey
 	});
+                set_material_alpha(plane_material, 50);
 var scene = 
 new THREE.Scene(
 );
@@ -135,10 +138,11 @@ new THREE.Plane(
                 application.y_target_rotation_on_mouse_down = 0;
                 application.mouse_y = 0;
                 application.mouse_y_on_mouse_down = 0;
-                application.window_half_x = window.innerWidth / 2;
-                application.window_half_y = window.innerHeight / 2;
+                application.window_half_x = app_width / 2;
+                application.window_half_y = app_height / 2;
                 application.is_mouse_down = false;
                 application.clicks = 1;
+	var ev_parent = this;
 	application.events.addListener("mousedown", function(x,y)
 	{    
 		application.mouse_x_on_mouse_down = x - application.window_half_x;
@@ -147,6 +151,7 @@ application.mouse_y_on_mouse_down = y - application.window_half_y;
 application.y_target_rotation_on_mouse_down = application.y_target_rotation;
 	}
 	);
+	var ev_parent = this;
 	application.events.addListener("drag", function(x,y)
 	{    
 		application.mouse_x = x - application.window_half_x;
@@ -155,6 +160,7 @@ application.mouse_y = y - application.window_half_y;
 application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
 	}
 	);
+	var ev_parent = this;
 	application.events.addListener("animate", function()
 	{    
 		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
@@ -162,6 +168,7 @@ set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
 set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
 	}
 	);
+	var ev_parent = this;
 	application.events.addListener("keydown", function(keycode)
 	{    
 		if (btn1.isVisible())
@@ -207,6 +214,7 @@ if(ui)
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
                 btn1.set_rotation(15);
+	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
 		lbl0.text("Got " + application.clicks + " smileys");
