--- a/xss/production/test/3js_cube_img.html
+++ b/xss/production/test/3js_cube_img.html
@@ -31,6 +31,8 @@ var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var app_width = window.innerWidth;
+var app_height = window.innerHeight;
 var application = {};
 application.events = new ms.event.EventHolder();
 		var streamer = new ms.streamer.Streamer();
@@ -83,7 +85,7 @@ application.events = new ms.event.EventHolder();
     // --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
-renderer.setSize( window.innerWidth,window.innerHeight );
+renderer.setSize( app_width, app_height );
 function render() {
 var now   = new Date().getTime();
 if (g_elapsed < 0)
@@ -123,8 +125,9 @@ map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_6').asset),
 	});
 	materials.push(__basic_material6);
 var plane_material = new THREE.MeshBasicMaterial({
-color:14737632
+color:Grey
 	});
+                set_material_alpha(plane_material, 50);
 var scene = 
 new THREE.Scene(
 );
@@ -160,9 +163,10 @@ new THREE.Plane(
                 application.y_target_rotation_on_mouse_down = 0;
                 application.mouse_y = 0;
                 application.mouse_y_on_mouse_down = 0;
-                application.window_half_x = window.innerWidth / 2;
-                application.window_half_y = window.innerHeight / 2;
+                application.window_half_x = app_width / 2;
+                application.window_half_y = app_height / 2;
                 application.is_mouse_down = false;
+	var ev_parent = this;
 	application.events.addListener("mousedown", function(x,y)
 	{    
 		application.mouse_x_on_mouse_down = x - application.window_half_x;
@@ -171,6 +175,7 @@ application.mouse_y_on_mouse_down = y - application.window_half_y;
 application.y_target_rotation_on_mouse_down = application.y_target_rotation;
 	}
 	);
+	var ev_parent = this;
 	application.events.addListener("drag", function(x,y)
 	{    
 		application.mouse_x = x - application.window_half_x;
@@ -179,6 +184,7 @@ application.mouse_y = y - application.window_half_y;
 application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
 	}
 	);
+	var ev_parent = this;
 	application.events.addListener("animate", function()
 	{    
 		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
