--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -173,6 +173,7 @@ window.onload = function()
                 lbl1.position(220, 190);
 		    btnSound1 = new ms.ui.Button( 
 	    "images/sound_2.png","images/sound_2.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btnSound1.events.addListener("click", function()
 	{    
 		sound_1.pause();
@@ -184,6 +185,7 @@ application.curr_sound.play();
                 btnSound1.rect(275, 210, 50, 10);
 		    btnSound2 = new ms.ui.Button( 
 	    "images/sound_1.png","images/sound_1.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btnSound2.events.addListener("click", function()
 	{    
 		sound_2.pause();
@@ -199,6 +201,7 @@ application.curr_sound.play();
                 volume_bar.rect(225, 120, 150, 10);
 		    btn1 = new ms.ui.Image( 
 	    "images/arrow_left.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
 		volume_bar.value(volume_bar.get_value() - 10);
@@ -208,6 +211,7 @@ application.curr_sound.volume -= 0.100000001;
                 btn1.rect(200, 115, 20, 20);
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_right.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
 		volume_bar.value(volume_bar.get_value() + 10);
@@ -221,6 +225,7 @@ application.curr_sound.volume += 0.100000001;
                 lbl3.position(220, 100);
 		    btnPlay = new ms.ui.Button( 
 	    "images/play.png","images/play_over.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btnPlay.events.addListener("click", function()
 	{    
 		application.curr_sound.play();
@@ -229,6 +234,7 @@ application.curr_sound.volume += 0.100000001;
                 btnPlay.rect(175, 300, 50, 50);
 		    btnPause = new ms.ui.Button( 
 	    "images/pause.png","images/pause_over.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btnPause.events.addListener("click", function()
 	{    
 		application.curr_sound.pause();
@@ -237,6 +243,7 @@ application.curr_sound.volume += 0.100000001;
                 btnPause.rect(275, 300, 50, 50);
 		    btnStop = new ms.ui.Button( 
 	    "images/stop.png","images/stop_over.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btnStop.events.addListener("click", function()
 	{    
 		application.curr_sound.pause();
