--- a/xss/production/test/ui_class_test.html
+++ b/xss/production/test/ui_class_test.html
@@ -73,9 +73,9 @@ function start(resolution)
                 this.img2 = null;
 	this.traslate = function() 
 	{
-		this.set_x(this.x + 5);
-this.set_y(this.y + 5);
-this.set_rotation(this.get_rotation() + 10);
+		this.x += 5;
+this.y += 5;
+this.set_rotation(this.rotation + 10);
 	};
 	var ev_parent = this;
 	this.events.addListener("click", function()
