--- a/xss/production/test/ui_demo.html
+++ b/xss/production/test/ui_demo.html
@@ -114,6 +114,7 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
                 application.clicks = 0;
+	var ev_parent = this;
 	application.events.addListener("keydown", function(keycode)
 	{    
 		if (btn1.isVisible())
@@ -183,12 +184,14 @@ window.onload = function()
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",test1.manager, test1);
                 btn1.set_rotation(15);
+	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
 		lbl1.text("Got " + application.clicks + " smileys");
 application.clicks = application.clicks + 1;
 	}
 	);
+	var ev_parent = this;
 	btn1.events.addListener("mousedown", function()
 	{    
 		btn1.set_rotation(btn1.get_rotation() + 50);
@@ -202,6 +205,7 @@ application.clicks = application.clicks + 1;
  pb1.center(150, 10); 
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_left.png",test2.manager, test2);
+	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() - 1);
@@ -210,6 +214,7 @@ application.clicks = application.clicks + 1;
                 btn2.rect(200, 115, 20, 20);
 		    btn3 = new ms.ui.Image( 
 	    "images/arrow_right.png",test2.manager, test2);
+	var ev_parent = this;
 	btn3.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() + 1);
@@ -223,6 +228,7 @@ application.clicks = application.clicks + 1;
                 lbl2.position(210, 200);
 		    btnNext = new ms.ui.Button( 
 	    "images/arrow_right_green_48.png","images/arrow_right_48.png",g_ui_root.manager, g_ui_root);
+	var ev_parent = this;
 	btnNext.events.addListener("click", function()
 	{    
 		if (main.get_active() < main.count() - 1)
@@ -237,6 +243,7 @@ btnNext.set_rotation(btnNext.get_rotation() + 10);
 		    btnPrev = new ms.ui.Button( 
 	    "images/arrow_left_green_48.png","images/arrow_left_48.png",g_ui_root.manager, g_ui_root);
                 btnPrev.set_rotation(45);
+	var ev_parent = this;
 	btnPrev.events.addListener("click", function()
 	{    
 		if (main.get_active() > 0)
